<resources>
    <string name="app_name">Alarm</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_math_activity">Math Test</string>
    <string name="tap_me">Tap me!</string>
    <string name="make_me_green"> Make Me Green! </string>
    <string name="gyro_rotation_text">Rotate me!</string>

    <!-- This is not a java file, you cannot comment with "//". You need to use the markers on either end of this comment -->
    <string name="value_one">Value_One</string>
    <string name="value_two">Value_Two</string>
    <string name="operation">op</string>
    <string name="equal_sign">=</string>
    <string name="randomize">Randomize</string>
    <string name="check_solution">Enter</string>
    <string name="value_solution">Solution</string>
    <string name="status">Status: Enter Solution</string>
    <string name="title_activity_settings">Settings</string>



    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_physical">Enable Shake-to-Snooze</string>
    <string name="pref_description_physical">Recommended if you prefer a physical activity to get you up.</string>

    <string name="pref_title_mental">Enable Game-to-Snooze</string>
    <string name="pref_description_mental">Recommended if you prefer a mental activity to get you up.</string>

    <!-- Notifications Settings -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- End Settings Strings -->




</resources>
