<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".math_activity"
    tools:showIn="@layout/activity_math_activity">

    <TextView
        android:id="@+id/value_One"
        android:layout_width="47dp"
        android:layout_height="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/value_one"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/value_Two"
        android:layout_width="47dp"
        android:layout_height="44dp"
        android:layout_marginLeft="152dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/value_two"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/operation"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/operation"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/value_Two"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/value_One"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/equals"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/equal_sign"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/solution"
        app:layout_constraintStart_toEndOf="@+id/value_Two"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/solution"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/value_solution"
        android:inputType="number|numberSigned"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/equals"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/check"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="136dp"
        android:onClick="checkSolution"
        android:text="@string/check_solution"
        app:layout_constraintEnd_toStartOf="@+id/status"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/randomize"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="156dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="156dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:onClick="randomize"
        android:text="@string/randomize"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check" />

    <TextView
        android:id="@+id/status"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="188dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="136dp"
        android:gravity="center_vertical"
        android:text="@string/status"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>